CMAKE_MINIMUM_REQUIRED (VERSION 2.8)
PROJECT (SlonEngine)
SET (CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules;${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules/FindModules;${CMAKE_MODULE_PATH}")

IF (WIN32)
    # setup 3rd party directory as search path
    SET ( SLON_ENGINE_3RD_PARTY_FOUND FALSE )
    IF ( MSVC AND MSVC_VERSION EQUAL 1600 )
        SET ( CMAKE_PREFIX_PATH "${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/msvs_2010;${CMAKE_PREFIX_PATH}" )
        SET ( 3RD_PARTY_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/msvs_2010 )
        SET ( SLON_ENGINE_3RD_PARTY_FOUND TRUE )
    ELSEIF ( MSVC AND MSVC_VERSION EQUAL 1500 )
        SET ( CMAKE_PREFIX_PATH "${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/msvs_2008;${CMAKE_PREFIX_PATH}" )
        SET ( 3RD_PARTY_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/msvs_2008 )
        SET ( SIMPLE_GL_3RD_PARTY_FOUND TRUE )
    ENDIF ( MSVC AND MSVC_VERSION EQUAL 1600 )
    
    IF (SLON_ENGINE_3RD_PARTY_FOUND)
        LIST ( APPEND CMAKE_INCLUDE_PATH 
            ${3RD_PARTY_DIRECTORY}/boost/ 
            ${3RD_PARTY_DIRECTORY}/BULLET_PHYSICS/include
            ${3RD_PARTY_DIRECTORY}/SDL/include
        )

        LIST ( APPEND CMAKE_LIBRARY_PATH 
            ${3RD_PARTY_DIRECTORY}/boost/lib
            ${3RD_PARTY_DIRECTORY}/BULLET_PHYSICS/lib
            ${3RD_PARTY_DIRECTORY}/SDL/lib
        )

        LIST ( APPEND CMAKE_PROGRAM_PATH
            ${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/gnuplot
        )

        # copy dlls into target binary dir
        ADD_CUSTOM_TARGET (SlonEngineCopyDLL)
        SET (3RD_PARTY_TARGET SlonEngineCopyDLL)

        MACRO (COPY_DLLS SOURCE DESTINATION COPY_FILES)
            FOREACH(FILENAME ${${COPY_FILES}})
                ADD_CUSTOM_COMMAND( TARGET ${3RD_PARTY_TARGET}
                                    COMMAND ${CMAKE_COMMAND} -E copy "${SOURCE}/${FILENAME}" "${DESTINATION}/${FILENAME}")
            ENDFOREACH(FILENAME)
        ENDMACRO (COPY_DLLS)

        SET (SDL_DLLS
            SDL.dll
            SDL_image.dll
        )

        SET (RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
        SET (3RD_PARTY_TARGET_DIRECTORY ${RUNTIME_OUTPUT_DIRECTORY}/${CMAKE_CFG_INTDIR})
        COPY_DLLS(${3RD_PARTY_DIRECTORY}/SDL/bin ${3RD_PARTY_TARGET_DIRECTORY} SDL_DLLS)
    ENDIF (SLON_ENGINE_3RD_PARTY_FOUND)
ENDIF (WIN32)

IF (NOT SLON_ENGINE_PROJECT_GROUP)
    SET (SLON_ENGINE_PROJECT_GROUP Lib)
ENDIf (NOT SLON_ENGINE_PROJECT_GROUP)

SET (SIMPLE_GL_CONFIGURE_INTRUSIVE 	ON)	
SET (SIMPLE_GL_PATH					${CMAKE_CURRENT_SOURCE_DIR}/SimpleGL/SimpleGL)
SET (SIMPLE_GL_PROJECT_GROUP        ${SLON_ENGINE_PROJECT_GROUP})
SET (XMLPP_CONFIGURE_INTRUSIVE 		ON)
SET (XMLPP_PATH						${CMAKE_CURRENT_SOURCE_DIR}/XML++)
SET (XMLPP_PROJECT_GORUP            ${SLON_ENGINE_PROJECT_GROUP})

ADD_SUBDIRECTORY(SimpleGL)
ADD_SUBDIRECTORY(XML++)
ADD_SUBDIRECTORY(SlonEngine)
      