CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
PROJECT (SlonEngine)
SET (CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules;${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules/FindModules;${CMAKE_MODULE_PATH}")

IF (NOT SLON_ENGINE_CONFIGURE_INTRUSIVE)
    SET (RUNTIME_OUTPUT_DIRECTORY 	  ${PROJECT_SOURCE_DIR}/bin)
    SET (CFG_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
ENDIF (NOT SLON_ENGINE_CONFIGURE_INTRUSIVE)

IF (WIN32)
    # setup 3rd party directory as search path
    SET ( SLON_ENGINE_3RD_PARTY_FOUND FALSE )
    IF ( MSVC AND (MSVC_VERSION EQUAL 1600) )
        SET ( CMAKE_PREFIX_PATH "${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/msvs_2010;${CMAKE_PREFIX_PATH}" )
        SET ( 3RD_PARTY_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/msvs_2010 )
        SET ( SLON_ENGINE_3RD_PARTY_FOUND TRUE )
    ELSEIF ( MSVC AND (MSVC_VERSION EQUAL 1500) )
        SET ( CMAKE_PREFIX_PATH "${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/msvs_2008;${CMAKE_PREFIX_PATH}" )
        SET ( 3RD_PARTY_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/msvs_2008 )
        SET ( SLON_ENGINE_3RD_PARTY_FOUND TRUE )
    ENDIF ( MSVC AND (MSVC_VERSION EQUAL 1600) )
    
    IF (SLON_ENGINE_3RD_PARTY_FOUND)
        #SET ( Boost_DEBUG                   TRUE)
        SET ( ENV{BOOST_LIBRARYDIR}         "") # trick to force FindBoost ignore environment BOOST_LIBRARYDIR variable
        SET ( Boost_NO_SYSTEM_PATHS         TRUE)
        SET ( BOOST_ROOT                    ${3RD_PARTY_DIRECTORY}/boost )
        SET ( BOOST_INCLUDEDIR              ${3RD_PARTY_DIRECTORY}/boost/boost )
        SET ( BOOST_LIBRARYDIR              ${3RD_PARTY_DIRECTORY}/boost/lib )
        
        SET ( Python_ADDITIONAL_VERSIONS    2.6 ) # trick to find builtin python 2.6

        LIST ( APPEND CMAKE_INCLUDE_PATH 
            ${3RD_PARTY_DIRECTORY}/boost/ 
            ${3RD_PARTY_DIRECTORY}/BULLET_PHYSICS/include
            ${3RD_PARTY_DIRECTORY}/SDL/include
            ${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Python26/include
        )

        LIST ( APPEND CMAKE_LIBRARY_PATH 
            ${3RD_PARTY_DIRECTORY}/boost/lib
            ${3RD_PARTY_DIRECTORY}/BULLET_PHYSICS/lib
            ${3RD_PARTY_DIRECTORY}/SDL/lib
            ${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Python26/libs
        )

        LIST ( APPEND CMAKE_PROGRAM_PATH
            ${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/gnuplot
            ${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/Python26
            ${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/GCCXML/bin
        )

        # copy dlls into target binary dir
        ADD_CUSTOM_TARGET (SlonEngineCopyDLL)
        SET (3RD_PARTY_TARGET SlonEngineCopyDLL)
        SET_TARGET_PROPERTIES (${3RD_PARTY_TARGET} PROPERTIES
            FOLDER Utility
        )
        
        MACRO (COPY_DLLS SOURCE DESTINATION COPY_FILES)
            FOREACH(FILENAME ${${COPY_FILES}})
                FILE (COPY "${SOURCE}/${FILENAME}" DESTINATION "${DESTINATION}")
            ENDFOREACH(FILENAME)
        ENDMACRO (COPY_DLLS)

        SET (SDL_DLLS
            SDL.dll
            SDL_image.dll
        )
        
        SET (BOOST_DLLS
            boost_python-vc90-mt-gd-1_45.dll
            boost_python-vc90-mt-1_45.dll
        )
               

        COPY_DLLS(${3RD_PARTY_DIRECTORY}/SDL/bin ${RUNTIME_OUTPUT_DIRECTORY} SDL_DLLS)
        COPY_DLLS(${3RD_PARTY_DIRECTORY}/boost/bin  ${RUNTIME_OUTPUT_DIRECTORY} BOOST_DLLS)
    ENDIF (SLON_ENGINE_3RD_PARTY_FOUND)
ENDIF (WIN32)

IF (NOT SLON_ENGINE_PROJECT_GROUP)
    SET (SLON_ENGINE_PROJECT_GROUP Lib)
ENDIf (NOT SLON_ENGINE_PROJECT_GROUP)

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS TRUE)

SET (SIMPLE_GL_CONFIGURE_INTRUSIVE 	ON)	
SET (SIMPLE_GL_PATH					${CMAKE_CURRENT_SOURCE_DIR}/SimpleGL/SimpleGL)
SET (SIMPLE_GL_PROJECT_GROUP        ${SLON_ENGINE_PROJECT_GROUP})
SET (XMLPP_CONFIGURE_INTRUSIVE 		ON)
SET (XMLPP_PATH						${CMAKE_CURRENT_SOURCE_DIR}/XML++)
SET (XMLPP_PROJECT_GROUP            ${SLON_ENGINE_PROJECT_GROUP})

ADD_SUBDIRECTORY(SimpleGL)
ADD_SUBDIRECTORY(XML++)
ADD_SUBDIRECTORY(SlonEngine)
      
