CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
PROJECT (SlonEngine)

# vars
SET (TARGET_NAME        SlonEngine)
SET (TARGET_UNIX_NAME   SlonEngine)

INCLUDE (Configure.cmake)
IF (NOT SLON_ENGINE_CONFIGURE_INTRUSIVE)
	INCLUDE(Uninstall OPTIONAL)
ENDIF (NOT SLON_ENGINE_CONFIGURE_INTRUSIVE)

# sources
ADD_SUBDIRECTORY (src)

# examples 
IF (BUILD_EXAMPLES)
	ADD_SUBDIRECTORY (examples)
ENDIF (BUILD_EXAMPLES)

# tests
IF (BUILD_TESTS)
	ADD_SUBDIRECTORY (tests)
ENDIF (BUILD_TESTS)

IF (INSTALL_EXAMPLES)
    INSTALL ( DIRECTORY Data
        DESTINATION     ${INSTALL_BINDIR}/examples
        PATTERN         ".*"                        EXCLUDE
    )
ENDIF (INSTALL_EXAMPLES)

# documentation
IF (SLON_ENGINE_BUILD_DOCUMENTATION)
    INCLUDE (Doxy)
ENDIF (SLON_ENGINE_BUILD_DOCUMENTATION)
