CMAKE_MINIMUM_REQUIRED (VERSION 2.8)
PROJECT (SlonEngine)

# vars
SET (TARGET_NAME        SlonEngine)
SET (TARGET_UNIX_NAME   SlonEngine)

INCLUDE (Configure.cmake)

# sources
ADD_SUBDIRECTORY (src)

# examples 
IF (SLON_ENGINE_BUILD_EXAMPLES)
	ADD_SUBDIRECTORY (examples)
ENDIF (SLON_ENGINE_BUILD_EXAMPLES)

# tests
IF (SLON_ENGINE_BUILD_TESTS)
	ADD_SUBDIRECTORY (tests)
ENDIF (SLON_ENGINE_BUILD_TESTS)

IF (INSTALL_EXAMPLES)
    INSTALL ( DIRECTORY Data
        DESTINATION     ${INSTALL_BINDIR}/examples
        PATTERN         ".*"                        EXCLUDE
    )
ENDIF (INSTALL_EXAMPLES)

# documentation
IF (SLON_ENGINE_BUILD_DOCUMENTATION)
    SET (USER_DOX_PROJECT_FOLDER Utility)
    INCLUDE (Doxy)
ENDIF (SLON_ENGINE_BUILD_DOCUMENTATION)
