# vars
SET ( EXAMPLE_INSTALL_BINDIR 	${INSTALL_BINDIR}/examples )
SET ( EXAMPLE_DIR 		        ${PROJECT_SOURCE_DIR}/examples )
SET ( EXAMPLE_PROJECT_GROUP     Examples )

# list here all example dirs
#ADD_SUBDIRECTORY(Gallery)
#ADD_SUBDIRECTORY(Castles)
ADD_SUBDIRECTORY(Water)
ADD_SUBDIRECTORY(Runner)
